--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,14 @@
 	background-color: #FFC0C0;
 }
 
+#maintable {
+	border-collapse: collapse;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100vh;
+}
+
 .fsheader {
     margin-top: 1em;
     border-radius: 4px 4px 0 0;
