--- a/public/css/main.css
+++ b/public/css/main.css
@@ -195,6 +195,31 @@ html, body {
     padding: 10px;
 }
 
+.container {
+	width: 100%;
+	max-width: 500px;
+	margin: 0 auto;
+	padding: 10px;
+}
+
+.row {
+	height: 200px;
+	width: 100%;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
+.col3 {
+	width: 32%;
+	float: left;
+	height: 100%;
+	margin-right: 2%;
+}
+
+.col3:last-child {
+	margin-right: 0;
+}
+
 .loader {
     border: 5px solid #f3f3f3;
     border-radius: 50%;
