--- a/public/css/main.css
+++ b/public/css/main.css
@@ -220,6 +220,10 @@ html, body {
 	margin-right: 0;
 }
 
+.fighterquote {
+	font-size: 18px;
+}
+
 .loader {
     border: 5px solid #f3f3f3;
     border-radius: 50%;
