add ability to make moves

--- a/public/css/fight.css
+++ b/public/css/fight.css
@@ -21,4 +21,14 @@
 
 .gridelement {
 	height: 10vh;
+	width: 30%;
+}
+
+.gridentry {
+	font-size: 36px;
+	text-align: center;
+}
+
+#errors {
+	display: none;
 }
