--- a/public/css/main.css
+++ b/public/css/main.css
@@ -270,6 +270,14 @@ html, body {
     animation: spin 1s linear infinite;
 }
 
+.stream {
+	padding: 10px;
+}
+
+.streamimg {
+	width: 256px;
+}
+
 /* Safari */
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
